--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "animate.css": "^3.7.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "bootstrap": "^4.4.1",
     "browserslist": "^4.7.3",
     "caniuse-lite": "^1.0.30001011",
     "chart.js": "^2.9.3",
@@ -45,8 +46,10 @@
     "nodemailer": "^6.3.1",
     "pure-react-carousel": "^1.23.3",
     "react-alice-carousel": "^1.16.0",
+    "react-bootstrap": "^1.0.0-beta.16",
     "react-bootstrap-carousel": "^4.0.1",
     "react-google-recaptcha": "^2.0.1",
+    "react-modal": "^3.11.1",
     "react-notifications-component": "^2.2.3",
     "react-plotly.js": "^2.4.0",
     "react-simple-parallax": "^0.2.6",
