--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,8 @@
     "prop-types": "^15.7.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-facebook-login": "^4.1.1",
+    "react-google-login": "^5.0.7",
     "react-moment": "^0.9.2",
     "react-redux": "^7.0.2",
     "react-router-dom": "^5.0.0",
