--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
     "react-alice-carousel": "^1.16.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-bootstrap-carousel": "^4.0.1",
+    "react-facebook-login": "^4.1.1",
+    "react-google-login": "^5.0.7",
     "react-google-recaptcha": "^2.0.1",
     "react-modal": "^3.11.1",
     "react-notifications-component": "^2.2.3",
